--- a/Practice 5/public/page.html
+++ b/Practice 5/public/page.html
@@ -1,9 +1,9 @@
 <!DOCKTYPE html>
 <html lang="ru">
     <head>
-        <title>Страница</title>
+        <title>РЎС‚СЂР°РЅРёС†Р°</title>
     </head>
     <body>
-        Привет!
+        РџСЂРёРІРµС‚!
     </body>
 </html>
