--- a/Practice 2/authorization.html
+++ b/Practice 2/authorization.html
@@ -2,10 +2,10 @@
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="styles.css" type="text/css">
-        <title>РђРІС‚РѕСЂРёР·Р°С†РёСЏ</title>
+        <title>Авторизация</title>
         <div id="check">
             <input type="checkbox">
-            <label id="theme">РўС‘РјРЅР°СЏ С‚РµРјР°</label>
+            <label id="theme">Тёмная тема</label>
         </div>
     </head>
     <body>
@@ -13,40 +13,40 @@
             <form>
                 <div>
                     <a href="page.html">
-                        <img src="https://cdni.comss.net/logo/opera-new.png" alt="Р‘СЂР°СѓР·РµСЂ Opera">
+                        <img src="https://cdni.comss.net/logo/opera-new.png" alt="Браузер Opera">
                     </a>
                 </div>
                 <div>
-                    <label>РђРІС‚РѕСЂРёР·Р°С†РёСЏ</label>
+                    <label>Авторизация</label>
                 </div>
                 <table>
                     <tr>
                         <td>
-                            <label>РђРґСЂРµСЃ СЌР»РµРєС‚СЂРѕРЅРЅРѕР№ РїРѕС‡С‚С‹:</label>
+                            <label>Адрес электронной почты:</label>
                         </td>
                         <td>
-                            <input type="text" placeholder="СЌР». РїРѕС‡С‚Р°">
+                            <input type="text" placeholder="эл. почта">
                         </td>
                     </tr>
                     <tr>
                         <td align="right">
-                            <label>РџР°СЂРѕР»СЊ:</label>
+                            <label>Пароль:</label>
                         </td>
                         <td>
-                            <input type="text" placeholder="РїР°СЂРѕР»СЊ">
+                            <input type="text" placeholder="пароль">
                         </td>
                     </tr>
                     <tr>
                         <td></td>
                         <td align="right">
                             <a href="page.html">
-                                <label id="fail">Р—Р°Р±С‹Р»Рё Р»РѕРіРёРЅ РёР»Рё РїР°СЂРѕР»СЊ?</label>
+                                <label id="fail">Забыли логин или пароль?</label>
                             </a>
                         </td>
                     </tr>
                 </table>
                 <div>
-                    <input id="auth" type="submit" value="РђРІС‚РѕСЂРёР·РѕРІР°С‚СЊСЃСЏ">
+                    <input id="auth" type="submit" value="Авторизоваться">
                 </div>
             </form>
         </div>
